removed admin tab, created users and create user tab